# sarus-hooks

./: .gitignore  .gitmodules  CMakeLists.txt  Containerfile  LICENSE  LICENSE_HEADER  README.md
.devcontainer/: postCreateCommand.sh
.devcontainer/alpine/: Containerfile  devcontainer.json  spack.yaml
.devcontainer/opensuse/: Containerfile  devcontainer.json  spack.yaml
.github/workflows/: ci-container.yml  vs-testing.yml  z-test-pipeline.yml
cmake/toolchain_files/: gcc-asan.cmake  gcc-gcov.cmake
dep/: CMakeLists.txt
src/: CMakeLists.txt
src/amdgpu/: AmdGpuHook.cpp  CMakeLists.txt
src/glibc/: CMakeLists.txt  GlibcHook.cpp  README.md
src/glibc/test/: CMakeLists.txt
src/ldcache/: CMakeLists.txt  LdCacheHook.cpp  LdCacheHook.hpp  README.md  main.cpp
src/mount/: CMakeLists.txt  MountHook.cpp  README.md
src/mpi/: CMakeLists.txt  MpiHook.cpp  SharedLibrary.cpp
src/mps/: CMakeLists.txt  MpsHook.cpp
src/pmix/: CMakeLists.txt  PMIxHook.cpp  PMIxHook.hpp  main.cpp
src/slurm_global_sync/: CMakeLists.txt
src/ssh/: CMakeLists.txt
src/stdout_stderr_test/: CMakeLists.txt
src/timestamp/: CMakeLists.txt  TimestampHook.cpp
templates/cdi/: cdi-mps.json
templates/hooks.d/: 86-hook-mps.json
test/amdgpu/: CMakeLists.txt  test_AmdGpuHook.cpp
test/glibc/: Checker.hpp
test/stdout_stderr_test/: CMakeLists.txt
tests/: cdi-mps.bats  test_glibc_hook.bats  test_ldcache_hook.bats  test_mount_hook.bats  test_pmix_hook.bats
tests/assets/: scontrol-mock
utils/: glibc_host_libs_search.sh
